--- a/PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/04-Regex(docker compose)/docker-compose.yml
+++ b/PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/04-Regex(docker compose)/docker-compose.yml
@@ -7,5 +7,6 @@ services:
       - "8888:8888"
     volumes:
       - ./notebooks:/home/jovyan/work
+    working_dir: /home/jovyan/work
     environment:
       - JUPYTER_TOKEN=mysecuretoken
