--- a/PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/04-Regex(docker compose)/Dockerfile
+++ b/PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/04-Regex(docker compose)/Dockerfile
@@ -14,7 +14,8 @@ RUN pip install --no-cache-dir \
     numpy \
     pandas \
     matplotlib \
-    scikit-learn 
+    scikit-learn \
+    firebase_admin
 
 # Set the command to start Jupyter Notebook
 CMD ["start-notebook.sh"]
