firestore local testing file updated

--- a/PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/04-Regex(docker compose)/Dockerfile
+++ b/PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/04-Regex(docker compose)/Dockerfile
@@ -15,7 +15,8 @@ RUN pip install --no-cache-dir \
     pandas \
     matplotlib \
     scikit-learn \
-    firebase_admin
+    firebase_admin \
+    uuid
 
 # Set the command to start Jupyter Notebook
 CMD ["start-notebook.sh"]
