--- a/PGD-DS-AI-2024/PGD_ML/pyproject.toml
+++ b/PGD-DS-AI-2024/PGD_ML/pyproject.toml
@@ -6,13 +6,14 @@ authors = [
     {name = "uzairahmedwyne@hotmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.9,<3.13"
 dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
-    "numpy (>=2.2.1,<3.0.0)",
-    "matplotlib (>=3.10.0,<4.0.0)",
+    "numpy (>=1.16.0,<3.0.0)",
+    "matplotlib (>=3.5.0,<4.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
-    "scikit-learn (>=1.6.0,<2.0.0)"
+    "scikit-learn (>=1.6.0,<2.0.0)",
+    "ydata-profiling (>=4.12.1,<5.0.0)"
 ]
 
 [tool.poetry]
