--- a/PGD-DS-AI-2024/PGD_ML/pyproject.toml
+++ b/PGD-DS-AI-2024/PGD_ML/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "matplotlib (>=3.5.0,<4.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
     "scikit-learn (>=1.6.0,<2.0.0)",
-    "ydata-profiling (>=4.12.1,<5.0.0)"
+    "ydata-profiling (>=4.12.1,<5.0.0)",
+    "pydotplus (>=2.0.2,<3.0.0)"
 ]
 
 [tool.poetry]
